--- a/little-lemon/index.html
+++ b/little-lemon/index.html
@@ -4,10 +4,16 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Little Lemon - Mediterranean Restaurant</title>
+
+    <meta name="description" content="A wonderful Mediterranean restaurant."/>
+    <meta property="og:title" content="Little Lemon - A Taste of Mediterranean Delight"/>
+    <meta property="og:description" content="Discover our vibrant Mediterranean flavors."/>
+    <meta property="og:image" content="https://yourwebsite.com/path/to/image.jpg"/>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
+
